--- a/plugin.xml
+++ b/plugin.xml
@@ -2,8 +2,8 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="com.whebcraft.cordova.plugin.downloader"
-        version="0.1.0">
+        id="cordova-plugin-downloader-ios-android"
+        version="1.2.0">
 
   <name>Cordova Downloader</name>
 
